--- a/veterinaria-solidaria-app/src/index.html
+++ b/veterinaria-solidaria-app/src/index.html
@@ -6,9 +6,28 @@
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
+  <ul class="menu">
+
+      <li> <a href="index.html">Inicio</a></li>
+      <li> <a href="#">Productos</a></li>
+      <li> <a href="#">Clientes</a></li>
+      <li> <a href="#">Compras</a></li>
+      <li> <a href="app/ventas/ventas.component.html">Ventas</a></li>
+      <li> <a href="#">Salir</a></li>
+
+  </ul>
+
+  <div align="center" >   
+    <img src="img/veterinaria1.jpg" width="650" height="350">
+    <img src="img/veterinaria2.jpg" width="650" height="350">
+    <img src="img/veterinaria3.jpg" width="650" height="350">
+    <img src="img/veterinaria4.jpg" width="650" height="350">
+  </div>
+
   <app-root></app-root>
 </body>
 </html>
