--- a/veterinaria-solidaria-app/src/index.html
+++ b/veterinaria-solidaria-app/src/index.html
@@ -10,24 +10,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-  <ul class="menu">
+  
 
-      <li> <a href="index.html">Inicio</a></li>
-      <li> <a href="#">Productos</a></li>
-      <li> <a href="#">Clientes</a></li>
-      <li> <a href="#">Compras</a></li>
-      <li> <a href="app/ventas/ventas.component.html">Ventas</a></li>
-      <li> <a href="#">Salir</a></li>
-
-  </ul>
-
-  <div align="center" >   
-    <img src="img/veterinaria1.jpg" width="650" height="350">
-    <img src="img/veterinaria2.jpg" width="650" height="350">
-    <img src="img/veterinaria3.jpg" width="650" height="350">
-    <img src="img/veterinaria4.jpg" width="650" height="350">
-  </div>
-
+  <!-- <div align="center" >   
+    <img src="assets/img/veterinaria1.jpg" width="650" height="350">
+    <img src="assets/img/veterinaria2.jpg" width="650" height="350">
+    <img src="assets/img/veterinaria3.jpg" width="650" height="350">
+    <img src="assets/img/veterinaria4.jpg" width="650" height="350">
+  </div> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <app-root></app-root>
 </body>
 </html>
